apps/truenas/harbor.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    toolkit.fluxcd.io/tenant: sre-team
    app: kubed
