apps/truenas/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lab.sipwork.pro
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lab.sipwork.pro`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
          namespace: traefik
  tls:
    secretName: lab.sipwork.pro-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lab.sipwork.pro-http
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      middlewares:
        - name: redirectscheme
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
          namespace: traefik
